syntax = "proto3";

package datavis.project;

message Project {
  repeated DataSource source = 1;
  repeated PlotView plot_view = 2;
  Rectangle main_window_position = 3;
}

message DataSource {
  string path = 1;
}

message PlotView {
  Rectangle position = 1;
  repeated Plot plot = 2;
}

message Plot {
  string data_source = 1;
  string data_set = 2;
  repeated uint32 dimension = 3;
}

message Rectangle {
  int64 x = 1;
  int64 y = 2;
  int64 width = 3;
  int64 height = 4;
}
